Fixed "read more" display on IE9

--- a/sites/all/themes/sammenomaarhus/css/styles.css
+++ b/sites/all/themes/sammenomaarhus/css/styles.css
@@ -3319,11 +3319,15 @@ article.node-proposal {
       height: 10px;
       right: 35px;
       bottom: -5px; }
-    article.node-proposal div.bubble-teaser li.node-readmore {
-      position: absolute;
-      bottom: 0.6em;
-      right: 0.2em;
-      opacity: 0.8; }
+  article.node-proposal ul.links {
+    position: absolute;
+    bottom: 6em;
+    right: 2em;
+    opacity: 0.8; }
+    article.node-proposal ul.links a {
+      color: #f2f2f2; }
+      article.node-proposal ul.links a:hover, article.node-proposal ul.links a:focus {
+        text-decoration: none; }
   article.node-proposal.hotness-0 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-20 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-40 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-60 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-80 div.bubble-teaser span.border-cover-snippet, article.node-proposal.hotness-100 div.bubble-teaser span.border-cover-snippet {
     -moz-transition: all 0.5s;
     -o-transition: all 0.5s;
